Exemplificação da imagem

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         </title>
     </head>
     <body>
-        Meu Projeto
+        <header>
+            <img src=""
+            <section>
+
+            </section>
+        </header>
+        Listagem de alunos
     </body>
 </html>
